# BamSorter

./: BamSorter.cpp  CMakeLists.txt
cmake/: FindLZ4.cmake
